--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Snake 🐍</title>
 </head>
 <body>
+    <div id="scoreboard">0</div>
+
     <div id="game-board"></div>
     <script src="js/script.js" defer type="module"></script>
 </body>
