--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="scoreboard">0</div>
 
     <div id="game-board"></div>
+    <audio id="audio" autoplay loop src="mixkit-quiet-forest-ambience-1220.wav"></audio>
     <script src="js/script.js" defer type="module"></script>
 </body>
 </html>
