Sound effects, the color didn't work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <div id="game-board"></div>
     <audio id="audio" autoplay loop src="mixkit-quiet-forest-ambience-1220.wav"></audio>
+    <audio id="eatAudio" src="mixkit-quick-insect-buzz-33.wav" hidden ></audio>
+
     <script src="js/script.js" defer type="module"></script>
 </body>
 </html>
